--- a/Journal/Journal/Base.lproj/Main.storyboard
+++ b/Journal/Journal/Base.lproj/Main.storyboard
@@ -17,34 +17,40 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="EntryCell" id="cMW-5k-pPP" customClass="EntryTableViewCell" customModule="Journal" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="28" width="414" height="43.5"/>
+                                <rect key="frame" x="0.0" y="28" width="414" height="42.5"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="cMW-5k-pPP" id="Sa1-Jz-tKe">
-                                    <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="42.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Body" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ww8-lw-mPr">
-                                            <rect key="frame" x="26" y="11" width="40" height="21"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Body" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ww8-lw-mPr">
+                                            <rect key="frame" x="20" y="23" width="38" height="20"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Timestamp" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZAK-GZ-pMq">
-                                            <rect key="frame" x="83" y="10" width="86" height="21"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Timestamp" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZAK-GZ-pMq">
+                                            <rect key="frame" x="322" y="0.0" width="72" height="17"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="n6F-mo-IyU">
-                                            <rect key="frame" x="195" y="11" width="34" height="21"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="n6F-mo-IyU">
+                                            <rect key="frame" x="20" y="0.0" width="37" height="21"/>
+                                            <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
+                                    <constraints>
+                                        <constraint firstItem="ZAK-GZ-pMq" firstAttribute="top" secondItem="Sa1-Jz-tKe" secondAttribute="top" id="1QT-sH-Ql2"/>
+                                        <constraint firstItem="n6F-mo-IyU" firstAttribute="leading" secondItem="Sa1-Jz-tKe" secondAttribute="leading" constant="20" id="KV4-ok-aKT"/>
+                                        <constraint firstAttribute="trailing" secondItem="ZAK-GZ-pMq" secondAttribute="trailing" constant="20" id="Qyt-pr-N4a"/>
+                                        <constraint firstItem="ww8-lw-mPr" firstAttribute="top" secondItem="n6F-mo-IyU" secondAttribute="bottom" constant="1" id="SEw-SU-goB"/>
+                                        <constraint firstAttribute="bottom" secondItem="ww8-lw-mPr" secondAttribute="bottom" id="lpm-oq-Jjd"/>
+                                        <constraint firstItem="n6F-mo-IyU" firstAttribute="top" secondItem="Sa1-Jz-tKe" secondAttribute="top" id="o21-Ul-gJ6"/>
+                                        <constraint firstItem="ww8-lw-mPr" firstAttribute="leading" secondItem="Sa1-Jz-tKe" secondAttribute="leading" constant="20" id="pbD-hf-599"/>
+                                    </constraints>
                                 </tableViewCellContentView>
                                 <connections>
                                     <outlet property="bodyLabel" destination="ww8-lw-mPr" id="9ni-cP-9sU"/>
@@ -71,17 +77,49 @@
             </objects>
             <point key="canvasLocation" x="1231.8840579710145" y="166.74107142857142"/>
         </scene>
-        <!--View Controller-->
+        <!--Title-->
         <scene sceneID="iDB-J1-Tu5">
             <objects>
-                <viewController id="3MO-bU-TSc" sceneMemberID="viewController">
+                <viewController id="3MO-bU-TSc" customClass="EntryDetailTableViewController" customModule="Journal" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="O0Y-9K-cw8">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter title" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="XeN-AE-Mo1">
+                                <rect key="frame" x="0.0" y="150" width="414" height="38"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="38" id="jZj-9h-FVn"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="sHZ-xK-6JV">
+                                <rect key="frame" x="0.0" y="198" width="414" height="364"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                        </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="5Lr-xn-YUn" firstAttribute="trailing" secondItem="XeN-AE-Mo1" secondAttribute="trailing" id="Ebk-7X-5vV"/>
+                            <constraint firstItem="XeN-AE-Mo1" firstAttribute="top" secondItem="5Lr-xn-YUn" secondAttribute="top" constant="10" id="MX9-sF-cY1"/>
+                            <constraint firstItem="5Lr-xn-YUn" firstAttribute="bottom" secondItem="sHZ-xK-6JV" secondAttribute="bottom" constant="300" id="UL7-fV-3xt"/>
+                            <constraint firstItem="XeN-AE-Mo1" firstAttribute="leading" secondItem="5Lr-xn-YUn" secondAttribute="leading" id="aYm-Hd-8QL"/>
+                            <constraint firstItem="sHZ-xK-6JV" firstAttribute="top" secondItem="XeN-AE-Mo1" secondAttribute="bottom" constant="10" id="amp-dZ-i2I"/>
+                            <constraint firstItem="5Lr-xn-YUn" firstAttribute="trailing" secondItem="sHZ-xK-6JV" secondAttribute="trailing" id="g2f-WT-1gf"/>
+                            <constraint firstItem="sHZ-xK-6JV" firstAttribute="leading" secondItem="5Lr-xn-YUn" secondAttribute="leading" id="wCU-wA-eQQ"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="5Lr-xn-YUn"/>
                     </view>
-                    <navigationItem key="navigationItem" id="HMH-pj-fV0"/>
+                    <navigationItem key="navigationItem" title="Title" id="AWD-fb-tKf">
+                        <barButtonItem key="rightBarButtonItem" systemItem="save" id="S4R-1Y-6uJ"/>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="bodyTextView" destination="sHZ-xK-6JV" id="aae-oY-5Gp"/>
+                        <outlet property="titleTextField" destination="XeN-AE-Mo1" id="Eea-ai-Zow"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rod-WO-Pn3" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
